# advent-of-code-2022

calorie-counting/: Cargo.toml
calorie-counting/src/: lib.rs  main.rs
camp-cleanup/: Cargo.toml
camp-cleanup/src/: lib.rs  main.rs
rock-paper-scissors/: Cargo.toml
rock-paper-scissors/src/: lib.rs  main.rs
rucksack-reorganisation/: Cargo.toml
rucksack-reorganisation/src/: lib.rs  main.rs
supply-stacks/: Cargo.toml
supply-stacks/src/: lib.rs  main.rs
tuning-trouble/: Cargo.toml
tuning-trouble/src/: lib.rs  main.rs
