[package]
name = "rock-paper-scissors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rock_paper_scissors_lib"
path = "src/lib.rs"

[[bin]]
name = "rock_paper_scissors"
path = "src/main.rs"

[dependencies]
