[package]
name = "rucksack-reorganisation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rucksack_reorganizer_lib"
path = "src/lib.rs"

[[bin]]
name = "rucksack_reorganizer"
path = "src/main.rs"

[dependencies]
